testdata/baselines/reference/submodule/conformance/checkJsxChildrenProperty13.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file.tsx(1,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file.tsx (1 errors) ====
    import React = require('react');
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    interface ButtonProp {
        a: number,
        b: string,
        children: Button;
    }
    
    class Button extends React.Component<ButtonProp, any> {
        render() {
            // Error children are specified twice
            return (<InnerButton {...this.props} children="hi">
                <div>Hello World</div>
                </InnerButton>);
        }
    }
    
    interface InnerButtonProp {
    	a: number
    }
    
    class InnerButton extends React.Component<InnerButtonProp, any> {
    	render() {
    		return (<button>Hello</button>);
    	}
    }
    